Fix minor jump when progress icon appears

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -129,6 +129,10 @@ body {
         .code-editor-progress {
             background-color: $muted-green;
             @include block();
+
+            img {
+                vertical-align: middle;
+            }
         }
     }
 
